--- a/views/pages/branchDetails.ejs
+++ b/views/pages/branchDetails.ejs
@@ -19,7 +19,7 @@
     <li> <b>city - </b> <%= results.city%></li>
     <li> <b>district - </b> <%= results.district%></li>
     <li> <b>state - </b> <%= results.state%></li>
-    <li> <b>bank_name - </b> <%= results.bank_name%></li>
+    <li> <b>bank_name - </b> <%= results.name%></li>
 </ul>
 
 </div>
