removed console stmt

--- a/views/pages/allBranches.ejs
+++ b/views/pages/allBranches.ejs
@@ -9,7 +9,7 @@
 <% include ../partials/nav.ejs %>
 
 <div class="container">
-<h2>All  <b style="color: green"><%= results[0].bank_name%></b> branches in <b style="color: green"><%= results[0].city%></b></h2>
+<h2>All  <b style="color: green"><%= results[0].name%></b> branches in <b style="color: green"><%= results[0].city%></b></h2>
 <ul>
     <% results.forEach(function(result) { %>
         <li><b>ifsc - </b> <%= result.ifsc%>; <b>bank_id - </b> <%= result.bank_id%>; <b>branch - </b> <%= result.branch%>;  <b>address - </b> <%= result.address%>;  <b>city - </b> <%= result.city%>; <b>district - </b> <%= result.district%>; <b>state - </b> <%= result.state%>; <b>bank_name - </b> <%= result.name%></li>
